@@ -10,11 +10,14 @@
 
 #include "defs.h"
 
-#ifdef _AIX
-typedef unsigned long length_t;  /* *sigh* */
+#if defined(_AIX)
+typedef unsigned long length_t;
+#elif defined(__INTEL_COMPILER) || defined(__GNUC__)
+typedef socklen_t length_t;
 #else
 typedef int length_t;
 #endif
+
 
 static int send_auth (auth_t *ap);
 
